--- a/Desktop/app/index.html
+++ b/Desktop/app/index.html
@@ -9,26 +9,28 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300&display=swap" rel="stylesheet"> 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="" id="theme">
 	<title>WatchRPC</title>
 	<div class="Menu-Bar">
 		<link rel="stylesheet" href="./css/titlebar.css">
-	
 		<div class="titlebar"></div>
 		<div class="titlebar2"></div>
 		<i class="bi bi-dash-lg" id="Min-button" onclick="window.controls.minimize()" ></i>
 		<i class="bi bi-x-lg" id="Exit-button" onclick="window.controls.close()" ></i>
-		<!-- <div class="fi fi-sr-cross" id="Exit-button" onclick="windowAction.close()"></div> -->
-		<!-- <div id="Min-button" onclick="windowAction.minimize()"></div> -->
 	</div>
 </head>
 <body>
 	<div id="main">
-		<div id="video_image"></div> 
+		<div id="image-container">
+			<div id="video_image"></div> 
+			<div id="progress1"></div>
+		</div>
 		<div id="main_text">
-		<p id="video_name" >Video Name [None]</p>
-		<p id="video_creater">Video Creater [None]</p>
+			<p id="video_name" >Video Name [None]</p>
+			<p id="video_creater">Video Creater [None]</p>
 		</div>
 	</div>
+
 	<div id="time-content">
 		<div id="time_bar"></div>
 		<p id="time">#:## / #:##</p>
