--- a/Desktop/app/settings.html
+++ b/Desktop/app/settings.html
@@ -14,7 +14,8 @@
         <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link rel="stylesheet" href="./css/style2.css">	
+		<!-- <link rel="stylesheet" href="./css/style2.css">	 -->
+		<link rel="stylesheet" href="./themes/flatLight.css">	
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 		<link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300&display=swap" rel="stylesheet"> 
         <title>WatchRPC</title>
@@ -26,6 +27,7 @@
 			<i class="bi bi-x-lg" id="Exit-button" onclick="windowAction.close();" ></i>
 			<!-- <div class="fi fi-sr-cross" id="Exit-button" onclick="windowAction.close()"></div> -->
 			<!-- <div id="Min-button" onclick="windowAction.minimize()"></div> -->
+			<!-- <link rel="stylesheet" href="./themes/flatDark.css">	 -->
 		</div>
 			<h2 id='game' class="text">Settings</h1> 
                 <div class="main-content">
@@ -63,6 +65,7 @@
 				document.getElementById("services").value = r.mode
             	document.getElementById("TTY").checked = Boolean(r.showTTY)
             	document.getElementById("uVT").checked = Boolean(r.useVideoThumbnails)
+				document.getElementById("theme").value = window.localStorage.getItem("theme")
 			}
 			func()
 			document.getElementById("checkbox-help").addEventListener("mouseenter",(t) => {
