--- a/Browser/static/popup/index.html
+++ b/Browser/static/popup/index.html
@@ -11,7 +11,7 @@
       <div id="logo"></div>
       <h5 class="text" id="logo-text">WatchRPC</h5>
       <h3 id="videoName" class="text"></h3>
-      <h4 id="videoCreater" class="text"></h4>
+      <h4 id="videoCreator" class="text"></h4>
     </div>
   </div>
   <script src="../../dist/popup.js"></script>
