--- a/Desktop/app/index.html
+++ b/Desktop/app/index.html
@@ -37,5 +37,5 @@
 	</div>
 	<i class="bi bi-gear" id="settings" onclick="window.settings.settings()"></i>
 </body>
-<script src="./renderer.js"></script>
+<script src="../dist/renderer.js"></script>
 </html>
