added vibe | cleared up code
added vibe
made the rest api params make more sense
other stuff that i don't remember sorry

--- a/Desktop/app/index.html
+++ b/Desktop/app/index.html
@@ -13,10 +13,10 @@
 	<title>WatchRPC</title>
 	<div class="Menu-Bar">
 		<link rel="stylesheet" href="./css/titlebar.css">
-		<div class="titlebar"></div>
+		<!-- <div class="titlebar"></div>
 		<div class="titlebar2"></div>
 		<i class="bi bi-dash-lg" id="Min-button" onclick="window.controls.minimize()" ></i>
-		<i class="bi bi-x-lg" id="Exit-button" onclick="window.controls.close()" ></i>
+		<i class="bi bi-x-lg" id="Exit-button" onclick="window.controls.close()" ></i> -->
 	</div>
 </head>
 <body>
@@ -26,8 +26,12 @@
 			<div id="progress1"></div>
 		</div>
 		<div id="main_text">
-			<p id="video_name" >Video Name [None]</p>
-			<p id="video_creater">Video Creater [None]</p>
+			<div id="text-theme-box">
+				<p id="video_name" >Video Name [None]</p>
+				<p id="video_creater">Video Creater [None]</p>
+				<!--  -->
+			</div>
+
 		</div>
 	</div>
 
