--- a/Desktop/app/settings.html
+++ b/Desktop/app/settings.html
@@ -54,6 +54,8 @@
 						<option value="neondark">neonDark</option>
 						<option value="flatlight">flatLight</option>
 						<option value="neonlight">neonLight</option>
+						<option value="acrylic">Acrylic</option>
+						
 						</select>
 					  </form>
 			    </div>
@@ -79,4 +81,4 @@
 
 
 		</script>
-        <script src="./renderer.js"></script>
+        <script src="../dist/renderer.js"></script>
