--- a/Desktop/app/index.html
+++ b/Desktop/app/index.html
@@ -21,6 +21,7 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
         />
         <link rel="stylesheet" href="" id="theme" />
+        <link rel="stylesheet" href="./css/main.css">
         <title>WatchRPC</title>
         <div class="Menu-Bar">
             <link rel="stylesheet" href="./css/titlebar.css" />
