Fixed spelling, Fixed title overflow

--- a/Desktop/app/index.html
+++ b/Desktop/app/index.html
@@ -40,7 +40,7 @@
             <div id="main_text">
                 <div id="text-theme-box">
                     <p id="video_name">Video Name [None]</p>
-                    <p id="video_creater">Video Creater [None]</p>
+                    <p id="video_creator">Video creator [None]</p>
                     <!--  -->
                 </div>
             </div>
