--- a/Desktop/app/index.html
+++ b/Desktop/app/index.html
@@ -23,13 +23,13 @@
         <link rel="stylesheet" href="" id="theme" />
         <link rel="stylesheet" href="./css/main.css">
         <title>WatchRPC</title>
-        <div class="Menu-Bar">
+        <!-- <div class="Menu-Bar">
             <link rel="stylesheet" href="./css/titlebar.css" />
-            <!-- <div class="titlebar"></div>
-		<div class="titlebar2"></div>
-		<i class="bi bi-dash-lg" id="Min-button" onclick="window.controls.minimize()" ></i>
-		<i class="bi bi-x-lg" id="Exit-button" onclick="window.controls.close()" ></i> -->
-        </div>
+            <div class="titlebar"></div>
+		    <div class="titlebar2"></div>
+		    <i class="bi bi-dash-lg" id="Min-button" onclick="window.controls.minimize()" ></i>
+		    <i class="bi bi-x-lg" id="Exit-button" onclick="window.controls.close()" ></i>
+        </div> -->
     </head>
     <body>
         <div id="main">
