🖌️Theme engine refactor, desc
Remove socket.io | no idea why is was here

Removed old menu bar

Changed the theme menu a bit

--- a/Desktop/app/index.html
+++ b/Desktop/app/index.html
@@ -58,4 +58,5 @@
         ></i>
     </body>
     <script src="../dist/renderer.js"></script>
+    <script src="../dist/themeManager.js"></script>
 </html>
