--- a/Desktop/app/settings.html
+++ b/Desktop/app/settings.html
@@ -7,7 +7,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
@@ -33,8 +32,8 @@
             <div id="checkboxs-area">
                 <input type="checkbox" id="TTY" name="TTY" />
                 <label for="TTY">showTTY</label><br />
-                <!-- <input type="checkbox" id="ErrNote" name="ErrNote" />
-                <label for="ErrNote">Error Notifications</label><br /> -->
+                <input type="checkbox" id="ErrNote" name="ErrNote" />
+                <label for="ErrNote">Error Notifications</label><br />
 
                 <div class="bi bi-question-square" id="checkbox-help"></div>
                 <p id="checkbox-help-text">
@@ -63,6 +62,7 @@
                 document.getElementById("services").value = r.mode;
                 document.getElementById("TTY").checked = Boolean(r.showTTY);
                 document.getElementById("theme").value = r.theme
+                document.getElementById("ErrNote").checked = r.errNote
             };
             func();
             document
