--- a/Desktop/app/settings.html
+++ b/Desktop/app/settings.html
@@ -25,6 +25,7 @@
             <form>
                 <select id="services" name="services">
                     <option value="ytmusic">YTmusic</option>
+                    <option value="spotify">Spotify</option>
                     <option value="youtube">Youtube</option>
                     <option value="tiktok">Tiktok</option>
                 </select>
