🛠️ Removed prettier, added ESlint, and started work on new platforms
🛠️Removed prettier, added ESlint
📻  Started work on more platforms

--- a/Desktop/app/settings.html
+++ b/Desktop/app/settings.html
@@ -28,6 +28,7 @@
                     <option value="spotify">Spotify</option>
                     <option value="youtube">Youtube</option>
                     <option value="tiktok">Tiktok</option>
+                    <option value="applemusic">Apple Music</option>
                 </select>
             </form>
             <div id="checkboxs-area">
@@ -50,6 +51,7 @@
                     <option value="neonDark">neonDark</option>
                     <option value="neonLight">neonLight</option>
                     <option value="winAcrylic">Acrylic</option>
+                    <option value="ipodClassic">iPod</option>
                 </select>
             </form>
         </div>
